--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppery?serverTimezone=Europe/Madrid
 spring.datasource.username=estefania
 spring.datasource.password=1234
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
