--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shoppery?serverTimezone=Europe/Madrid
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/shoppery?serverTimezone=Europe/Madrid
 spring.datasource.username=estefania
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jackson.serialization.write-dates-as-timestamps=true
